fix light and dark mode inconsistencies for the map page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,11 +6,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -39,14 +35,13 @@ h1 {
   line-height: 1.1;
 }
 
-.widget, button {
+button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -57,21 +52,6 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  .widget, button {
-    background-color: #f9f9f9;
-  }
-}
-
-
 
 @layer base {
   :root {
@@ -135,7 +115,7 @@ button:focus-visible {
   * {
     @apply border-border;
   }
-  body {
+  .widget, body {
     @apply bg-background text-foreground;
   }
 }
